theme/standard-totara/styles_ie6.css
/*
 * These styles are ONLY included for IE6 (via meta.php)
 */

input, select, button {
  padding-left:3px;
  padding-right:3px;
  overflow:visible;
}
#totara_menu ul li {
	display: inline-block;
	width: 30px;
}

div#content {
	margin: 0px 0px 100px;
	padding: 10px;
}

ul.tabrow1 {
	margin-top: 8px !important;
	padding: 5px 0;
}

.tabrow0 div.empty {
  margin-right: 0;
  margin-top:8px !important;
  top:3.9em;
}

li.active {
  border:0 none !important;
}

body#course-user .section {
  margin-top: 20px;
}


div#footer {
    position: relative;
}


/*
 * Totara dialogs
 */
div.totara-dialog div.ui-dialog-buttonpane button {
    padding-bottom: 0.1em;
}

div.totara-dialog td.select #search-tab table#dialog-search-table td.querybox input {
    margin-left: 0 !important;
}

/*
div.totara-dialog ul.treeview,
div.totara-dialog div#column-checkboxes {
    height: 222px;
}

div.totara-dialog .selected {
    height: 255px;
}*/

/* Login page */
#login-index .loginpanel,
#login-index .loginbox .loginform .form-label,
#login-index .loginbox .loginform .form-input {
    position:relative;
}

/* Admin block */
#left-column .block_admin_tree {
    position:relative;
}

/* Fix for selects which ignore z-index rules */
.hidden_select_ie {
    display:none;
}


/* Fixing the tree dialogs */
div.totara-dialog ul.treeview li {
    float: left;
    width: 80%;
}
div.totara-dialog ul.treeview li span.folder {
    float: left;
}

